Add favicon link to index.html
Added a favicon link to the head section of the HTML.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HILAL Official</title>
+    
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌙</text></svg>">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         @keyframes gradientBG {
@@ -60,7 +63,6 @@
             justify-content: center; align-items: center;
         }
 
-        /* الحالة العادية: أبيض مطفي */
         .icon-link i { 
             font-size: 2.2rem; 
             color: rgba(255, 255, 255, 0.7); 
@@ -68,7 +70,6 @@
             cursor: pointer;
         }
 
-        /* تأثير الهوفر: ينور بلونه الأصلي */
         .fa-youtube:hover, .magic-active .fa-youtube { color: #ff0000 !important; filter: drop-shadow(0 0 15px #ff0000); }
         .fa-tiktok:hover, .magic-active .fa-tiktok { color: #ffffff !important; filter: drop-shadow(0 0 15px #ffffff); }
         .fa-instagram:hover, .magic-active .fa-instagram { color: #e4405f !important; filter: drop-shadow(0 0 15px #e4405f); }
@@ -79,7 +80,6 @@
         .icon-link:hover i { transform: scale(1.2); }
         .icon-link:active i { transform: scale(0.9); }
 
-        /* القائمة الشفافة */
         .modal {
             display: none; position: fixed; z-index: 1000;
             left: 0; top: 0; width: 100%; height: 100%;
