--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌙</text></svg>">
     
+    <link rel="manifest" href="manifest.json">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         @keyframes gradientBG {
@@ -117,6 +119,8 @@
     </style>
 </head>
 <body>
+
+    <div class="stars"></div>
 
     <div class="controls">
         <button class="btn-style" onclick="toggleMagic()" id="magicBtn">Magic Mode</button>
